Project student_job_recommendation_v15 {
  database_type: 'PostgreSQL'
  Note: 'Canonical schema derived from Flyway V1-V15 on master.'
}

Table users {
  id bigserial [pk, increment]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  full_name varchar(255) [not null]
  phone varchar(50)
  role varchar(50) [not null]
  status varchar(50) [not null, default: 'ACTIVE']
  last_login_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table students {
  id bigserial [pk, increment]
  user_id bigint [not null, unique]
  student_code varchar(100)
  university varchar(255)
  major varchar(255)
  graduation_year integer
  location varchar(255)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table student_profiles {
  id bigserial [pk, increment]
  student_id bigint [not null, unique]
  headline varchar(255)
  summary text
  education_level varchar(100)
  gpa numeric(3,2)
  preferred_job_type varchar(50)
  preferred_working_model varchar(50)
  preferred_location varchar(255)
  education text
  experience text
  projects text
  target_position varchar(255)
  raw_text text
  processed_text text
  profile_completeness integer [not null, default: 0]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table companies {
  id bigserial [pk, increment]
  user_id bigint [not null, unique]
  company_name varchar(255) [not null]
  tax_code varchar(100)
  website_url varchar(500)
  logo_url varchar(500)
  industry varchar(150)
  company_size varchar(100)
  description text
  address text
  phone varchar(50)
  status varchar(50) [not null, default: 'PENDING']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table skills {
  id bigserial [pk, increment]
  name varchar(150) [not null, unique]
  normalized_name varchar(150)
  category varchar(100)
  description text
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table student_skills {
  id bigserial [pk, increment]
  student_id bigint [not null]
  skill_id bigint [not null]
  level varchar(50) [not null]
  source varchar(50) [not null]
  years_of_experience numeric(4,1)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(student_id, skill_id)'
}

Table jobs {
  id bigserial [pk, increment]
  company_id bigint [not null]
  title varchar(255) [not null]
  description text [not null]
  requirements text
  benefits text
  location varchar(255)
  job_type varchar(50) [not null]
  working_model varchar(50) [not null]
  status varchar(50) [not null, default: 'DRAFT']
  salary_min numeric(14,2)
  salary_max numeric(14,2)
  currency varchar(10)
  deadline date
  published_at timestamp
  closed_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table job_skills {
  id bigserial [pk, increment]
  job_id bigint [not null]
  skill_id bigint [not null]
  importance varchar(50) [not null]
  min_level varchar(50)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(job_id, skill_id)'
}

Table saved_jobs {
  id bigserial [pk, increment]
  student_id bigint [not null]
  job_id bigint [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(student_id, job_id)'
}

Table saved_searches {
  id bigserial [pk, increment]
  student_id bigint [not null]
  name varchar(100) [not null]
  keyword varchar(255)
  location varchar(255)
  job_type varchar(50)
  working_model varchar(50)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(student_id, lower(name))'
}

Table cv_files {
  id bigserial [pk, increment]
  student_id bigint [not null]
  file_name varchar(255) [not null]
  original_file_name varchar(255)
  stored_file_name varchar(255)
  file_url varchar(500) [not null]
  file_path varchar(500)
  content_type varchar(100)
  file_size bigint
  extracted_text text
  processed_text text
  extracted_skills jsonb [not null, default: `'[]'::jsonb`]
  analysis_status varchar(30) [not null, default: 'NOT_READY']
  analysis_error text
  language_code varchar(20)
  language_confidence numeric(5,4)
  processing_version varchar(100)
  analysis_warnings jsonb [not null, default: `'[]'::jsonb`]
  analyzed_at timestamp
  is_active boolean [not null, default: false]
  uploaded_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'PARTIAL UQ(student_id) WHERE is_active = true'
}

Table applications {
  id bigserial [pk, increment]
  student_id bigint [not null]
  job_id bigint [not null]
  cv_file_id bigint
  status varchar(50) [not null, default: 'PENDING']
  cover_letter text
  applied_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  reviewed_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(student_id, job_id)'
}

Table saved_candidates {
  id bigserial [pk, increment]
  company_id bigint [not null]
  student_id bigint [not null]
  application_id bigint [not null]
  note text
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(company_id, student_id)'
}

Table recommendation_runs {
  id bigserial [pk, increment]
  student_id bigint [not null]
  cv_file_id bigint
  source_type varchar(50) [not null]
  status varchar(50) [not null]
  algorithm varchar(100)
  algorithm_version varchar(100)
  total_jobs_scanned integer [not null, default: 0]
  started_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  finished_at timestamp
  error_message text
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table recommendation_results {
  id bigserial [pk, increment]
  run_id bigint [not null]
  job_id bigint [not null]
  score numeric(8,5) [not null]
  text_score numeric(8,5)
  skill_score numeric(8,5)
  scoring_strategy varchar(50)
  matched_keywords jsonb
  missing_skills jsonb [not null, default: `'[]'::jsonb`]
  reason text
  rank_position integer [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'UQ(run_id, job_id)'
}

Table notifications {
  id bigserial [pk, increment]
  user_id bigint [not null]
  type varchar(50) [not null]
  title varchar(255) [not null]
  message text [not null]
  reference_type varchar(50)
  reference_id bigint
  is_read boolean [not null, default: false]
  read_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table user_notification_settings {
  id bigserial [pk, increment]
  user_id bigint [not null, unique]
  application_status_enabled boolean [not null, default: true]
  job_status_enabled boolean [not null, default: true]
  recommendation_enabled boolean [not null, default: true]
  system_enabled boolean [not null, default: true]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Ref: students.user_id > users.id [delete: restrict]
Ref: student_profiles.student_id > students.id [delete: restrict]
Ref: companies.user_id > users.id [delete: restrict]
Ref: student_skills.student_id > students.id [delete: restrict]
Ref: student_skills.skill_id > skills.id [delete: restrict]
Ref: jobs.company_id > companies.id [delete: restrict]
Ref: job_skills.job_id > jobs.id [delete: restrict]
Ref: job_skills.skill_id > skills.id [delete: restrict]
Ref: saved_jobs.student_id > students.id [delete: restrict]
Ref: saved_jobs.job_id > jobs.id [delete: restrict]
Ref: saved_searches.student_id > students.id [delete: restrict]
Ref: cv_files.student_id > students.id [delete: restrict]
Ref: applications.student_id > students.id [delete: restrict]
Ref: applications.job_id > jobs.id [delete: restrict]
Ref: applications.cv_file_id > cv_files.id [delete: restrict]
Ref: saved_candidates.company_id > companies.id [delete: restrict]
Ref: saved_candidates.student_id > students.id [delete: restrict]
Ref: saved_candidates.application_id > applications.id [delete: restrict]
Ref: recommendation_runs.student_id > students.id [delete: restrict]
Ref: recommendation_runs.cv_file_id > cv_files.id [delete: restrict]
Ref: recommendation_results.run_id > recommendation_runs.id [delete: restrict]
Ref: recommendation_results.job_id > jobs.id [delete: restrict]
Ref: notifications.user_id > users.id [delete: restrict]
Ref: user_notification_settings.user_id > users.id [delete: restrict]

// Important indexes/checks not fully expressible above:
// - skills.normalized_name unique where normalized_name IS NOT NULL
// - saved_searches unique (student_id, lower(name))
// - cv_files unique (student_id) where is_active = TRUE
// - cv_files analysis_status/language_code/language_confidence CHECK constraints
// - recommendation score/check strategy constraints from V15
// - notifications.reference_type/reference_id is polymorphic and intentionally has no FK
